凡例ページ、フォームページ、リンクの追加

--- a/ex.html
+++ b/ex.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <title>例</title>
   </head>
+  <body>
+    <h2>ぎだにゃん企画</h2>
+    <h4>企画概要</h4>
+    <p>岐大祭公式キャラクター「ぎだにゃん」のPR活動を行います</p>
+    <h4>募集要項</h4>
+    <p>ぎだにゃんのファンアートを募集します</p>
+    <h5>募集対象</h5>
+    <p>岐大生のみor岐大生以外もOK</p>
+    <h5>参加決定までの流れ</h5>
+    <p>フォームの入力<br>
+      -> teamsへの参加など<br>
+      -> 企画書の提出<br>
+      -> 誓約書の記入、参加費の支払いなど<br>
+      -> 参加確定
+    </p>
+    <h5>注意事項</h5>
+    <p>委員の言う事には従うこと<br>
+      O且O日の説明会に必ず出席すること<br>
+      etc
+    </p>
+
+    <h6>以上のことに同意できる方-></h6>
+    <a href = "form.html">応募フォーム</a>
+    
+    <a href = "index.html">前の画面へ</a>
+  </body>
 </html>
