--- a/stage.html
+++ b/stage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
         <meta charset="utf-8"
         <title>第76回岐大祭 有志ステージ企画</title>        
@@ -8,5 +8,8 @@
         <h2>有志ステージ企画</h2>
         <p>有志ステージの説明</p>
         <a href = "index.html">back</a>
+
+        <h6>以上のことに同意できる方-></h6>
+        <a href = "form.html">応募フォーム</a>
     </body>
 </html>
