--- a/exhibition.html
+++ b/exhibition.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
-        <meta charset="utf-8"
+        <meta charset="utf-8">
         <title>第76回岐大祭 屋内企画</title>        
     </head>
     <body>
         <h2>屋内企画</h2>
         <p>屋内の説明</p>
         <a href = "index.html">back</a>
+
+        <h6>以上のことに同意できる方-></h6>
+        <a href = "form.html">応募フォーム</a>
     </body>
 </html>
