--- a/sport.html
+++ b/sport.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
         <meta charset="utf-8"
         <title>第76回岐大祭 フットサル大会</title>        
@@ -8,5 +8,8 @@
         <h2>フットサル大会企画</h2>
         <p>フットサル大会の説明</p>
         <a href = "index.html">back</a>
+
+        <h6>以上のことに同意できる方-></h6>
+        <a href = "form.html">応募フォーム</a>
     </body>
 </html>
