目次->ぎだにゃんのリンク

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>第76回岐大祭 統一募集用サイト</h1>
+        <a href = "ex.html">[参考用] ぎだにゃん企画</a><br>
         <a href = "market.html">模擬店フリマ企画</a><br>
         <a href = "exhibition.html">屋内企画</a><br>
         <a href = "sport.html">フットサル大会企画</a><br>
