有志ステージちょっと説明追加

--- a/stage.html
+++ b/stage.html
@@ -6,8 +6,25 @@
     </head>
     <body>
         <h2>有志ステージ企画</h2>
-        <p>有志ステージの説明</p>
-        <a href = "index.html">back</a>
+        <h4>有志ステージでは</h4>
+        <p></p>
+        <h4>開催日時</h4>
+        <ul>
+            <li>11/2(土) 10:30 ~ 17:00</li>
+            <li>11/3(日) 10:30 ~ 16:00</li>
+            <li>11/4(月) 10:30 ~ 16:00</li>
+        </ul>
+        <h4>開催場所</h4>
+        <p>南駐車場ステージ</p>
+        <h4>募集対象</h4>
+        <ul>
+            <li>東海国立大学機構構成員</li>
+            <li>大学外部の企画参加希望者</li>
+            <li>近隣高校生</li>
+        </ul>
+        
+
+        <a href = "index.html">前の画面へ</a>
 
         <h6>以上のことに同意できる方-></h6>
         <a href = "form.html">応募フォーム</a>
