有志説明いったん完成

--- a/stage.html
+++ b/stage.html
@@ -22,7 +22,54 @@
             <li>大学外部の企画参加希望者</li>
             <li>近隣高校生</li>
         </ul>
-        
+        <h4>貸出物品</h4>
+        <table border="1">
+            <tr>
+                <th>物品</th><th>貸出可能数量</th>
+            </tr>
+            <tr>
+                <td>ギターアンプ</td><td>2台</td>
+            </tr>
+            <tr>
+                <td>ベースアンプ</td><td>1台</td>
+            </tr>
+            <tr>
+                <td>ドラムセット</td><td>1セット</td>
+            </tr>
+            <tr>
+                <td>マイク</td><td>6本</td>
+            </tr>
+            <tr>
+                <td>ピンマイク</td><td>2本</td>
+            </tr>
+            <tr>
+                <td>マイクスタンド</td><td>6本</td>
+            </tr>
+            <tr>
+                <td>ワイヤレスマイク</td><td>4本</td>
+            </tr>
+        </table>        
+        <h4>説明会について</h4>
+        <p>7/17(水) オンラインで開催予定<br>
+        ※必ず出席をお願いします</p>
+        <h4>企画参加の流れ</h4>
+        <ol>
+            <li>応募フォームの入力 (岐大生のみ岐大祭企画参加者用teamsに参加)</li>
+            <li>説明会への参加</li>
+            <li>必要書類の提出 → 参加確定</li>
+            <li>出演日時の決定、通達</li>
+            <li>岐大祭当日</li>
+        </ol>
+        <h4>提出書類</h4>
+        <ul>
+            <li>有志ステージ参加企画書</li>
+            <li>誓約書</li>
+            <li>ビラ配布許可申請書</li>
+        </ul>
+        <h4>留意事項</h4>
+        <ul>
+            <li>書類が期限に提出されない場合、企画への参加は認められません</li>
+        </ul>
 
         <a href = "index.html">前の画面へ</a>
 
