stage.html 長による修正事項

--- a/stage.html
+++ b/stage.html
@@ -67,8 +67,22 @@
             <li>ビラ配布許可申請書</li>
         </ul>
         <h4>留意事項</h4>
+        <h5>応募・抽選について</h5>
         <ul>
-            <li>書類が期限に提出されない場合、企画への参加は認められません</li>
+            <li>応募団体の数によっては抽選を行う可能性がございます<br>
+            その場合、当選した団体のみ企画への参加が可能となります</li>
+            <li>抽選を公正に行うため、1人で複数の団体の代表を掛け持ちすること、1つの団体で複数回応募する行為はおやめください</li>
+            <li>タイムスケジュールの変更などは、執行委員にご相談ください</li>
+        </ul>
+        <h5>企画参加における注意事項</h5>
+        <ul>
+            <li>執行委員の指示および注意・禁止事項に従わない場合、その団体の企画を中止していただきます<br>
+            また、程度によっては次年度以降の参加規制などの罰則を設ける場合がございます</li>
+            <li>機材はレンタルするため、損傷させた場合は弁償していただく可能性がございます</li>
+            <li>企業の宣伝となる行為を禁止します</li>
+            <li>卑猥な行為、もしくはそれを連想させるような行為を禁止します</li>
+            <li>誹謗・中傷となる行為を禁止します</li>
+            <li>政治・宗教色の強い企画を禁止します</li>
         </ul>
 
         <a href = "index.html">前の画面へ</a>
