--- a/sport.html
+++ b/sport.html
@@ -6,7 +6,31 @@
     </head>
     <body>
         <h2>フットサル大会企画</h2>
-        <p>フットサル大会の説明</p>
+        <!-- 68thの資料がアツい -->
+        <h4>フットサル大会とは</h4>
+        <p>昨年までのスポーツ大会が競技を変えて開催‼</p>
+        <p>有志団体がチームを組んでフットサルで競います</p>
+        <h4>開催日時</h4>
+        <p>11月2日 12:00~</p>
+        <h4>開催場所</h4>
+        <p>ハンドボールコート</p>
+        <h4>募集対象</h4>
+        <h6>これどうします？岐大生だけってかいてある資料をどっかで見たことある気がするんですけど</h6>
+        <h4>説明会について</h4>
+        <h4>企画参加の流れ</h4>
+        <ol>
+            <li>応募フォームの入力 (岐大生のみ岐大祭企画参加者用teamsに参加)</li>
+            <li>説明会への参加</li>
+            <li>必要書類の提出 → 参加確定</li>
+            <li>トーナメント表の作成、通達</li>
+            <li>岐大祭当日</li>
+        </ol>
+        <h4>提出書類</h4>
+        <ul>
+            <li>参加誓約書</li>
+        </ul>
+        <h4>留意事項</h4>
+
         <a href = "index.html">back</a>
 
         <h6>以上のことに同意できる方-></h6>
