--- a/stage.html
+++ b/stage.html
@@ -7,7 +7,7 @@
     <body>
         <h2>有志ステージ企画</h2>
         <h4>有志ステージでは</h4>
-        <p></p>
+        <p>有志団体の方々に、南駐車場ステージでパフォーマンスを披露していただきます</p>
         <h4>開催日時</h4>
         <ul>
             <li>11/2(土) 10:30 ~ 17:00</li>
