文章いろいろ追加

--- a/market.html
+++ b/market.html
@@ -6,10 +6,95 @@
     </head>
     <body>
         <h2>模擬店フリマ企画</h2>
-        <p>模擬フリの説明</p>
-        <a href = "index.html">back</a>
+        <h4>模擬店フリマ企画では</h4>
+        <p>有志団体の方に模擬店や、フリーマーケットを出店していただきます</p>
+        <p>*飲食物を扱う団体を模擬店団体、それ以外の団体をフリーマーケット団体として扱うこととします</p>
+        <h4>開催日時</h4>
+        <p>11且2(土)~4(月) 10:00~17:00</p>
+        <h4>開催場所</h4>
+        <p>岐阜大学構内</p>
+        <h4>募集対象</h4>
+        <ul>
+            <li>東海国立大学機構構成員</li>
+            <li>大学外部の企画参加希望者</li>
+            <li>近隣高校生</li>
+        </ul>
+        <p>フリーマーケットに関しては個人でも応募いただけます。</p>
+        <h4>貸出物品</h4>
+        <table border="1">
+            <tr>
+                <th>物品</th><th>貸出可能数量</th><th>備考</th>
+            </tr>
+            <tr>
+                <td>テント</td><td>1張</td><td>模擬店団体は必須</td>
+            </tr>
+            <tr>
+                <td>テントウェイト</td><td>4個</td><td>テント使用団体は必須</td>
+            </tr>
+            <tr>
+                <td>長机</td><td>各団体2個まで</td><td></td>
+            </tr>
+            <tr>
+                <td>パイプ椅子</td><td>各団体2個まで</td><td></td>
+            </tr>
+        </table>  
+        <h4>説明会について</h4>
+        <h5>第1回説明会</h5>
+        <p>7且17日(水) オンラインで開催予定</p>
+        <h5>第2回説明会</h5>
+        <p>10月上旬の水曜 13時から 対面で開催</p>
+        <p>どちらも参加必須となります</p>
+        <h4>企画参加の流れ</h4>
+        <ol>
+            <li>応募フォームの入力 (岐大生のみ岐大祭企画参加者用teamsに参加)</li>
+            <li>第１回説明会への参加</li>
+            <li>必要書類の提出 → 参加確定</li>
+            <li>出店場所の決定、通達</li>
+            <li>第２回説明会への参加</li>
+            <li>必要書類の提出</li>
+            <li>岐大祭当日</li>
+        </ol>
+        <h4>提出書類</h4>
+        <ul>
+            <li>参加企画書</li>
+            <li>配布物申請書</li>
+            <li>パンフレット紹介枠</li> 
+            <li>誓約書</li>
+        </ul>
+        <p>提出期限などは説明会でお伝えします</p>
+        <h4>留意事項</h4>
+        <h5>出店料について</h5>
+        <p>消火器等物品の借用、ごみ処理等のために今年度より出店料を徴収する運びとなりました。</p>
+        <p>各団体1日あたり500円をお支払いいただきます。</p>
+        <p>支払い方法については後日連絡いたします。</p>
+        <p>ご協力のほどよろしくお願いいたします。</p>
+        <h5>衛生管理に関して</h5>
+        <p>模擬店を出店するにあたって食中毒の防止のため、衛生管理に注意していただきます。</p>
+        <ul>
+            <li>各団体の代表者、衛生管理者は、衛生管理講習(第2回説明会と併せて実施)に出席し、出店当日は1人以上が出店場所に常駐する</li>
+            <li>体調不良の状態で調理および食品の提供に関わらない</li>
+            <li>生のものを提供しない</li>
+            <li>調理は全て提供する当日に行う</li>
+            <li>作り置きをしない</li>
+        </ul>
+        <p>以上のことをはじめとして各団体での衛生管理にご協力ください。</p>
+        <h5>企画参加における注意事項</h5>
+        <ul>
+            <li>執行委員の指示および注意・禁止事項に従わない場合、その団体の企画を中止していただきます<br>
+            また、程度によっては次年度以降の参加規制などの罰則を設ける場合がございます</li>
+            <li>機材は一部を除きレンタルしたものであるため、損傷させた場合は弁償していただく可能性がございます</li>
+            <li>企業の宣伝となる行為を禁止します</li>
+            <li>卑猥な行為、もしくはそれを連想させるような行為を禁止します</li>
+            <li>誹謗・中傷となる行為を禁止します</li>
+            <li>政治・宗教色の強い企画を禁止します</li>
+            <li>その他禁止事項は以下をご確認ください</li>
+        </ul>
 
-        <h6>以上のことに同意できる方-></h6>
+        <h5>以上のことを了承の上で、応募フォームへとお進みください</h5>
         <a href = "form.html">応募フォーム</a>
+
+        <p>
+            <a href = "index.html">前の画面へ</a>
+        </p>
     </body>
 </html>
