--- a/sport.html
+++ b/sport.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <meta charset="utf-8"
+        <meta charset="utf-8">
         <title>第76回岐大祭 フットサル大会</title>        
     </head>
     <body>
@@ -15,8 +15,14 @@
         <h4>開催場所</h4>
         <p>ハンドボールコート</p>
         <h4>募集対象</h4>
-        <h6>これどうします？岐大生だけってかいてある資料をどっかで見たことある気がするんですけど</h6>
+        <ul>
+            <li>東海国立大学機構構成員</li>
+            <li>大学外部の企画参加希望者</li>
+            <li>近隣高校生</li>
+        </ul>
         <h4>説明会について</h4>
+        <p>7/17(水) オンラインで開催予定</p>
+        <p>※必ず出席をお願いします</p>
         <h4>企画参加の流れ</h4>
         <ol>
             <li>応募フォームの入力 (岐大生のみ岐大祭企画参加者用teamsに参加)</li>
@@ -30,10 +36,45 @@
             <li>参加誓約書</li>
         </ul>
         <h4>留意事項</h4>
+        <h5>規約</h5>
+        <ul>
+            <li>1チーム5~11人</li>
+            <li>1人が複数のチームに所属することを認めない</li>
+            <li>審判は参加選手から選出する</li>
+            <li>各試合前にチームの代表者が受付をする</li>
+            <li>試合開始時に各種目の規定人数に達していない場合、不戦敗とする</li>
+        </ul>
+        <h5>ルール</h5>
+        <p>以下を今大会での特別ルールとする</p>
+        <ul>
+            <li>タイムアウト、オフサイドはなしとする</li>
+            <li>外から入れるときはすべてキックインをする</li>
+            <li>スパイクシューズの使用を禁止する</li>
+            <li>女子のゴールは1ゴール2得点とする</li>
+            <li>トーナメント方式とする</li>
+            <li>試合時間は、前半12分、ハーフタイム3分、後半12分で行う</li>
+            <li>前半開始前に両チームの代表者がじゃんけんを行い、勝者がコートか、開始時のキックオフを選択する<br>
+                後半、延長戦開始時にコートとキックオフを入れ替える</li>
+            <li>選手交代は何度でも行える<br>
+                また、交代で一度ピッチの外に出た選手は、交代要員となってほかの選手と交代してピッチに戻ることができる</li>
+            <li>控えの選手がチームにいなくなった状態で、出場中の選手がケガや反則などにより退場を余儀なくされた場合、双方合意の上なら試合の続行を認める</li>
+            <li>準決勝以下の試合結果が引き分けだった場合、審判立ち合いのもと、両チームの代表者によるじゃんけんで勝敗を決める</li>
+            <li>結晶船及び3位決定戦の試合結果が引き分けだった場合、5人ずつのPK戦を行う<br>
+                5人で決着がつかない場合、サドンデスのPK戦を行う<br>
+                また、PK戦においては男女ともに1ゴール1得点とする</li>
+            <li>上記以外のことに関してはFIFAの公式ルールに従う</li>
+        </ul>
+        <h5>企画参加における注意事項</h5>
+        <ul>
+            <li>執行委員の指示および注意・禁止事項に従わない場合、その団体の企画への参加を中止していただきます<br>
+            また、程度によっては次年度以降の参加規制などの罰則を設ける場合がございます</li>
+        </ul>
 
-        <a href = "index.html">back</a>
-
-        <h6>以上のことに同意できる方-></h6>
+        <h5>以上のことを了承の上で、応募フォームへとお進みください</h5>
         <a href = "form.html">応募フォーム</a>
+
+        <p>
+            <a href = "index.html">前の画面へ</a>
+        </p>
     </body>
 </html>
