--- a/exhibition.html
+++ b/exhibition.html
@@ -7,9 +7,12 @@
     <body>
         <h2>屋内企画</h2>
         <p>屋内の説明</p>
-        <a href = "index.html">back</a>
 
-        <h6>以上のことに同意できる方-></h6>
+        <h5>以上のことを了承の上で、応募フォームへとお進みください</h5>
         <a href = "form.html">応募フォーム</a>
+
+        <p>
+            <a href = "index.html">前の画面へ</a>
+        </p>
     </body>
 </html>
