--- a/stage.html
+++ b/stage.html
@@ -67,12 +67,17 @@
             <li>ビラ配布許可申請書</li>
         </ul>
         <h4>留意事項</h4>
+        <h5>出演時間について</h5>
+        <p>20分枠、40分枠のどちらか希望を出していただきます</p>
+        <p>応募状況によって希望通りにならない場合もございます</p>
         <h5>応募・抽選について</h5>
         <ul>
             <li>応募団体の数によっては抽選を行う可能性がございます<br>
             その場合、当選した団体のみ企画への参加が可能となります</li>
             <li>抽選を公正に行うため、1人で複数の団体の代表を掛け持ちすること、1つの団体で複数回応募する行為はおやめください</li>
             <li>タイムスケジュールの変更などは、執行委員にご相談ください</li>
+            <li>機材レンタルや、応募団体の希望状況に応じて、こちらで出演日を指定させていただく場合がございます<br>
+                あらかじめご了承ください</li>
         </ul>
         <h5>企画参加における注意事項</h5>
         <ul>
@@ -85,9 +90,11 @@
             <li>政治・宗教色の強い企画を禁止します</li>
         </ul>
 
-        <a href = "index.html">前の画面へ</a>
-
-        <h6>以上のことに同意できる方-></h6>
+        <h5>以上のことを了承の上で、応募フォームへとお進みください</h5>
         <a href = "form.html">応募フォーム</a>
+
+        <p>
+            <a href = "index.html">前の画面へ</a>
+        </p>
     </body>
 </html>
