--- a/exhibition.html
+++ b/exhibition.html
@@ -6,7 +6,51 @@
     </head>
     <body>
         <h2>屋内企画</h2>
-        <p>屋内の説明</p>
+        <h4>屋内企画では</h4>
+        <p>有志団体が屋内展示を行います。<br>
+        また、人気投票を行い、上位の団体には商品があります。</p>
+        <h4>開催日時</h4>
+        <p>11且2日(土)~4日(月) 11:00~17:30</p>
+        <h4>開催場所</h4>
+        <p>岐阜大学全学共通教育講義棟1階~4階</p>
+        <h4>募集対象</h4>
+        <ul>
+            <li>東海国立大学機構構成員</li>
+            <li>大学外部の企画参加希望者</li>
+            <li>近隣高校生</li>
+        </ul>
+        <h4>貸出物品</h4>
+        <h2>企画長さんこれどうするー？</h2>
+        <h4>説明会について</h4>
+        <p>7/17(水) オンラインで開催予定<br>
+            ※必ず出席をお願いします</p>
+        <h4>企画参加の流れ</h4>
+        <ol>
+            <li>応募フォームの入力 (岐大生のみ岐大祭企画参加者用teamsに参加)</li>
+            <li>説明会への参加</li>
+            <li>必要書類の提出 → 参加確定</li>
+            <li>使用教室の決定、通達</li>
+            <li>岐大祭当日</li>
+        </ol>
+        <h4>提出書類</h4>
+        <ul>
+            <li>参加企画書</li>
+            <li>配布物申請書</li>
+            <li>パンフレット紹介枠</li> 
+            <li>誓約書</li>
+        </ul>
+        <h4>留意事項</h4>
+        <h5>企画参加における注意事項</h5>
+        <ul>
+            <li>執行委員の指示および注意・禁止事項に従わない場合、その団体の企画を中止していただきます<br>
+            また、程度によっては次年度以降の参加規制などの罰則を設ける場合がございます</li>
+            <li>機材は一部を除きレンタルしたものであるため、損傷させた場合は弁償していただく可能性がございます</li>
+            <li>企業の宣伝となる行為を禁止します</li>
+            <li>卑猥な行為、もしくはそれを連想させるような行為を禁止します</li>
+            <li>誹謗・中傷となる行為を禁止します</li>
+            <li>政治・宗教色の強い企画を禁止します</li>
+            <li>その他禁止事項は以下をご確認ください</li>
+        </ul>
 
         <h5>以上のことを了承の上で、応募フォームへとお進みください</h5>
         <a href = "form.html">応募フォーム</a>
