ちょっと屋内修正

--- a/exhibition.html
+++ b/exhibition.html
@@ -44,7 +44,7 @@
         <ul>
             <li>執行委員の指示および注意・禁止事項に従わない場合、その団体の企画を中止していただきます<br>
             また、程度によっては次年度以降の参加規制などの罰則を設ける場合がございます</li>
-            <li>機材は一部を除きレンタルしたものであるため、損傷させた場合は弁償していただく可能性がございます</li>
+            <li>食品の提供は許可された団体のみとする</li>
             <li>企業の宣伝となる行為を禁止します</li>
             <li>卑猥な行為、もしくはそれを連想させるような行為を禁止します</li>
             <li>誹謗・中傷となる行為を禁止します</li>
