--- a/exhibition.html
+++ b/exhibition.html
@@ -20,7 +20,7 @@
             <li>近隣高校生</li>
         </ul>
         <h4>貸出物品</h4>
-        <h2>企画長さんこれどうするー？</h2>
+        <h2>展示用パネル(数量は未定)</h2>
         <h4>説明会について</h4>
         <p>7/17(水) オンラインで開催予定<br>
             ※必ず出席をお願いします</p>
@@ -34,8 +34,7 @@
         </ol>
         <h4>提出書類</h4>
         <ul>
-            <li>参加企画書</li>
-            <li>配布物申請書</li>
+             <li>配布物申請書</li>
             <li>パンフレット紹介枠</li> 
             <li>誓約書</li>
         </ul>
@@ -53,7 +52,7 @@
         </ul>
 
         <h5>以上のことを了承の上で、応募フォームへとお進みください</h5>
-        <a href = "form.html">応募フォーム</a>
+        <a href = "https://forms.gle/z4ijcAMrTFRhUygC7">応募フォーム</a>
 
         <p>
             <a href = "index.html">前の画面へ</a>
