--- a/stage.html
+++ b/stage.html
@@ -91,7 +91,7 @@
         </ul>
 
         <h5>以上のことを了承の上で、応募フォームへとお進みください</h5>
-        <a href = "form.html">応募フォーム</a>
+        <a href = "https://forms.gle/z4ijcAMrTFRhUygC7">応募フォーム</a>
 
         <p>
             <a href = "index.html">前の画面へ</a>
