--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <meta charset="utf-8"
-        <title>第76回岐大祭 統一募集用サイト</title>        
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="cssIndex.css">       
     </head>
     <body>
         <h1>第76回岐大祭 統一募集用サイト</h1>
