--- a/exhibition.html
+++ b/exhibition.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>第76回岐大祭 屋内企画</title>        
+        <link rel="stylesheet" href="cssIndex.css">        
     </head>
     <body>
         <h2>屋内企画</h2>
@@ -20,7 +20,7 @@
             <li>近隣高校生</li>
         </ul>
         <h4>貸出物品</h4>
-        <h2>展示用パネル(数量は未定)</h2>
+        <p>展示用パネル(数量は未定)</p>
         <h4>説明会について</h4>
         <p>7/17(水) オンラインで開催予定<br>
             ※必ず出席をお願いします</p>
