--- a/market.html
+++ b/market.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <meta charset="utf-8"
-        <title>第76回岐大祭 模擬店フリマ企画</title>        
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="cssIndex.css">       
     </head>
     <body>
         <h2>模擬店フリマ企画</h2>
