--- a/stage.html
+++ b/stage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <meta charset="utf-8"
-        <title>第76回岐大祭 有志ステージ企画</title>        
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="cssIndex.css">        
     </head>
     <body>
         <h2>有志ステージ企画</h2>
