--- a/sport.html
+++ b/sport.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>第76回岐大祭 フットサル大会</title>        
+        <link rel="stylesheet" href="cssIndex.css">        
     </head>
     <body>
         <h2>フットサル大会企画</h2>
