market red-char

--- a/market.html
+++ b/market.html
@@ -2,7 +2,13 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="cssIndex.css">       
+        <link rel="stylesheet" href="cssIndex.css">
+        <style>
+            .charge{
+                color: red;
+                font-weight: bold;
+            }
+        </style>       
     </head>
     <body>
         <h2>模擬店フリマ企画</h2>
@@ -63,9 +69,9 @@
         </ul>
         <p>提出期限などは説明会でお伝えします</p>
         <h4>留意事項</h4>
-        <h5>出店料について</h5>
+        <h4 class="charge">出店料について</h4>
         <p>消火器等物品の借用、ごみ処理等のために今年度より出店料を徴収する運びとなりました。</p>
-        <p>各団体1日あたり500円をお支払いいただきます。</p>
+        <p class="charge">各団体1日あたり500円をお支払いいただきます。</p>
         <p>支払い方法については後日連絡いたします。</p>
         <p>ご協力のほどよろしくお願いいたします。</p>
         <h5>衛生管理に関して</h5>
