フットサル参加者

--- a/sport.html
+++ b/sport.html
@@ -2,7 +2,12 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="cssIndex.css">        
+        <link rel="stylesheet" href="cssIndex.css">  
+        <style>
+            .caution{
+                font-weight: bold;
+            }
+        </style>      
     </head>
     <body>
         <h2>フットサル大会企画</h2>
@@ -16,10 +21,9 @@
         <p>ハンドボールコート</p>
         <h4>募集対象</h4>
         <ul>
-            <li>東海国立大学機構構成員</li>
-            <li>大学外部の企画参加希望者</li>
-            <li>近隣高校生</li>
+            <li>岐阜大学生のみ</li>
         </ul>
+        <p class="caution">他の企画とは異なり、岐大生のみを参加可能と致します</p>
         <h4>説明会について</h4>
         <p>7/17(水) オンラインで開催予定</p>
         <p>※必ず出席をお願いします</p>
