且きもすぎ

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>第76回岐大祭 統一募集用サイト</h1>
-        <p>第76回岐大祭の統一募集期間は6且27日(木)から7且16日(火)です。</p>
+        <p>第76回岐大祭の統一募集期間は6月27日(木)から7月17日(水)です。</p>
         <p>各企画、昨年と異なる点があるため、事前に情報共有を行ってから企画へ応募していただこうという運びとなりました。</p>
         <p>応募したい企画のボタンを押して説明ページへとお進みください。</p>
         <p>
