--- a/market.html
+++ b/market.html
@@ -16,7 +16,7 @@
         <p>有志団体の方に模擬店や、フリーマーケットを出店していただきます</p>
         <p>*飲食物を扱う団体を模擬店団体、それ以外の団体をフリーマーケット団体として扱うこととします</p>
         <h4>開催日時</h4>
-        <p>11且2(土)~4(月) 10:00~17:00</p>
+        <p>11月2(土)~4(月) 10:00~17:00</p>
         <h4>開催場所</h4>
         <p>岐阜大学構内</p>
         <h4>募集対象</h4>
@@ -46,7 +46,7 @@
         </table>  
         <h4>説明会について</h4>
         <h5>第1回説明会</h5>
-        <p>7且17日(水) オンラインで開催予定</p>
+        <p>7月17日(水) オンラインで開催予定</p>
         <h5>第2回説明会</h5>
         <p>10月上旬の水曜 13時から 対面で開催</p>
         <p>どちらも参加必須となります</p>
